--- a/components/Card/Card.css
+++ b/components/Card/Card.css
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 200px;
+    /* width: 200px; */
     height: 250px;
     border: 2px solid var(--primary-color);
     padding: 0.9rem;
@@ -78,5 +78,14 @@
     to {
         transform: translate(20px, -20px) scale(1.05);
         opacity: 1;
+    }
+}
+
+@media screen and (max-width : 800px) {
+    .card{
+        zoom: 0.5;
+    }
+    .card__title{
+        font-size: 1.2rem;
     }
 }
